--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "gatsby-plugin-typescript": "^2.1.11",
     "react": "^16.10.0",
     "react-dom": "^16.10.0",
+    "react-icons": "^3.7.0",
     "styled-components": "^4.4.0"
   },
   "devDependencies": {
