--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "styled-components": "^4.4.0"
   },
   "devDependencies": {
+    "@hot-loader/react-dom": "^16.9.0",
     "gh-pages": "^2.1.1",
     "prettier": "^1.18.2"
   },
